--- a/frontend003/Dockerfile
+++ b/frontend003/Dockerfile
@@ -6,4 +6,4 @@ COPY ./dist/intranet-ipr-frontend/browser/ /usr/share/nginx/html/
 # Copia el nginx.conf personalizado para SPA (si tienes)
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
 
-RUN chmod -R 755 /usr/share/nginx/html
+RUN chmod -R a+r /usr/share/nginx/html
